# SAT-with-DPLL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cdcl_solver.h  cnf_parser.h  display.h  dpll_solver.h  dpll_test.h  hanidoku_solver.h  list.h  utils.h
src/: cdcl_solver.cpp  cnf_parser.cpp  display.cpp  main.cpp  utils.cpp
